--- a/src/styles/CitySelectionForm.css
+++ b/src/styles/CitySelectionForm.css
@@ -9,6 +9,7 @@ element {
 
 select {
     width: 100%;
+    height: 40px;
     margin: 25px auto;
     border-radius: 5px;
     text-align: center;
@@ -16,7 +17,8 @@ select {
 
 button {
     width: 100%;
-    margin-bottom: 25px;
+    height: 40px;
+    /* margin-bottom: 25px; */
     border-radius: 12px;
 
     
