--- a/src/styles/DisplayPhoto.css
+++ b/src/styles/DisplayPhoto.css
@@ -1,3 +1,39 @@
 img {
-    padding: 20px;
+    padding-bottom: 25px;
+    width: 100%;
+}
+
+
+@media (min-width: 600px) {
+    .photos {
+        flex-direction: row;   
+        flex-wrap: wrap;       
+        justify-content: space-between;
+    }
+
+    .photo-container {
+        flex-basis: 45%;
+        
+        margin: 10px;
+    }
+
+    img {
+        width: 100%;
+        height: 100%;
+        padding-bottom: 10px;
+    }
+}
+
+@media (min-width: 800px) {
+    .photo-container {
+        flex-basis: 30%;
+        margin: 10px;
+    }
+}
+
+@media (min-width: 1000px) {
+    .photo-container {
+        flex-basis: 20%;
+        margin: 10px;
+    }
 }
